Create signup user logic
