# config/routes.rb
@@ -8,4 +8,5 @@ Rails.application.routes.draw do
   get "up" => "rails/health#show", as: :rails_health_check
 
   resources :prices, only: [ :index ]
+  post 'signup', to: 'registrations#create'
 end
